/* English */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <attend#65899975>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -14,8 +14,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 {{en-verb}}
 
 # {{lb|en|archaic|transitive}} To [[listen]] to (something or someone); to pay attention to; regard; heed. {{defdate|from 15th c.}}
-#* {{RQ:Sidney Arcadia}}
-#*: The diligent pilot in a dangerous tempest doth not '''attend''' the unskilful words of the passenger.
+#* {{RQ:Sidney Arcadia|text=The diligent pilot in a dangerous tempest doth not '''attend''' the unskilful words of the passenger.}}
 #* {{RQ:Swift Tale of a Tub|section=IX|sectionname=A Digression Concerning the Original, the Use and Improvement of Madness in a Commonwealth|pages=169–170|pageref=170|passage=The preſent Argument is the moſt abſtracted that ever I engaged in, it ſtrains my Faculties to their higheſt Stretch; and I deſire the Reader to '''attend''' with utmoſt perpenſity; For, I now proceed to unravel this knotty Point.}}
 # {{lb|en|archaic|intransitive}} To [[listen]] ({{m|en|to}}, {{m|en|unto}}). {{defdate|from 15th c.}}
 #* '''1912''', {{w|Rudyard Kipling}}, ''[[s:The Beginning of the Armadillos|The Beginning of the Armadillos]]''
