--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -15,7 +15,9 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}. Compare {{m|en|nah}}
 ====Particle====
 {{en-adv|-}}
 
-# {{lb|en|informal}} [[yes|Yes]]. {{defdate|from 19th c.}}
+# {{lb|en|colloquial}} [[yes]].
+# {{lb|en|colloquial|}} Used to express [[acknowledgment]] of what was previously said.
+#: {{ux|en|Do you wanna get pizza for dinner?<br>'''Yeah''', I think I'm gonna eat some leftovers.}}
 
 =====Synonyms=====
 * {{l|en|yes}}, {{l|en|yep}}, {{l|en|yup}}, {{l|en|aye}}, {{l|en|ya}}, {{l|en|yea}}, {{l|en|uh-huh}}
