--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -114,7 +114,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Persian: {{t+|fa|تبلیغ|tr=tabliğ|sc=fa-Arab}}, {{t|fa|آنونس|tr=ânons|sc=fa-Arab}}, {{t+|fa|اعلان|tr=e'lân}}
 * Polish: {{t+|pl|reklama|f}}
 * Portuguese: {{t+|pt|anúncio|m}}, {{t+|pt|publicidade|f}}, {{t+|pt|reclame|m}}, {{t+|pt|propaganda|f}}
-* Romanian: {{t+|ro|anunț|n}} [[publicitate]] {{g|f}}, {{t+|ro|reclamă|f}}
+* Romanian: {{t+|ro|anunț|n}}, {{t|ro|publicitate|f}}, {{t+|ro|reclamă|f}}
 * Romansch: {{t|rm|reclamă|f}}, {{t|rm|publicitad|f}}
 * Russian: {{t+|ru|рекла́ма|f}}, {{t+|ru|объявле́ние|n}}, {{t+|ru|ано́нс|m}}, {{t+|ru|заявле́ние|n}}
 * Scottish Gaelic: {{t|gd|sanas-reic|m}}
