--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -54,7 +54,7 @@ From {{der|en|frm|pole|t=hen}} + {{m|en|cat}}. Origin unknown, possible explanat
 * Basque: {{t|eu|ipurtats}}
 * Belarusian: {{t|be|тхор лясны́|m}}, {{t|be|тхор чо́рны|m}}, {{t|be|тхор|m}}
 * Breton: {{t|br|pudask|m}}
-* Bulgarian: {{t+|bg|прът|m}}
+* Bulgarian: {{t+|bg|пор|m}}
 * Catalan: {{t+|ca|turó|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|艾虎|tr=àihǔ}}
