--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -585,12 +585,23 @@ A way to think of the difference between ''simple'' and {{m|es|sencillo}}, which
 Borrowed from {{bor|tl|es|simple}}.
 
 ===Pronunciation===
-* {{IPA|tl|/ˈsimplɛ/}}
+* {{hyph|tl|sim|ple}}
+* {{tl-IPA}}
 
 ===Adjective===
-{{tl-adj|símple}}
+{{tl-adj}}
 
-# {{l|en|simple}}; [[plain]]
+# {{l|en|simple}}; [[easy]] to [[do]]
 #: {{syn|tl|payak|yano|liso}}
 #* {{quote-book|1=tl|year=1994|author=Al O. Santiago|title=Sining ng pagsasaling-wika: sa Filipino mula sa Ingles|url=https://books.google.com/books?id=ufBHnk2ITxgC&redir_esc=y|isbn=9712315509|text='''Simpleng-simple''' rin ang aklat na ito kung ihahambing sa aklat ni Mildred Larson.|t=This book is also '''very simple''' compared to the book of Mildred Larson.}}
 #* {{quote-book|1=tl|year=2002|title=Yaman Ng Pagkatao i Tm' 2002 Ed.|publisher=Rex Bookstore, Inc.|url=https://books.google.com/books?id=JwbAtIzGuboC&redir_esc=y|isbn=9712332160|page=173|text=Ang boluntaryong pagpili ng '''simpleng''' pamumuhay ay isang desisyong maaari nating maisakatuparan.|t=The voluntary choice of a '''simple''' life is a decision that we can carry out.}}
+# [[common]]; [[ordinary]]
+#: {{syn|tl|karaniwan|pangkaraniwan}}
+# [[easy]] to [[understand]]
+# [[simple]]; [[plain]]
+#: {{syn|tl|payak}}
+# {{lb|tl|grammar}} [[simple]]
+#: {{syn|tl|payak}}
+
+====Derived terms====
+{{der3|tl|simplehan|kasimplehan|pagkasimple|napakasimple}}
