--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -82,6 +82,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 |pull one's weight
 |put on weight
 |throw one's weight around
+|throw-weight
 |topweight
 |triweight
 |underweight
