t+fr:[[inesthétisme]] ([[WT:EDIT|Assisted]]) <unsightliness#65968578>

--- a/en/u/unsightliness.742254.wikitext
+++ b/en/u/unsightliness.742254.wikitext
@@ -14,5 +14,5 @@
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
 * Finnish: {{t+|fi|rumuus}}, {{t|fi|rumannäköisyys}}
-* French: {{t-needed|fr}}
+* French: {{t+|fr|inesthétisme|m}}
 {{trans-bottom}}
