--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -143,6 +143,7 @@ From {{inh|en|enm|consumen}}, from {{der|en|fro|consumer}}, from {{der|en|la|con
 * Dutch: {{t+|nl|verteren}}, {{t+|nl|consumeren}}
 * Finnish: {{t+|fi|tuhota}}, {{t+|fi|tuhoutua}}
 * French: {{t+|fr|consumer}}
+* German: {{t+|de|verzehren}}
 * Greek: {{t+|el|αφανίζω}}, {{t+|el|εξολοθρεύω}}, {{t+|el|εκμηδενίζω}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|elpusztít}}, {{t+|hu|felemészt}}
