t+de:[[verzehren]] ([[WT:EDIT|Assisted]]) <consume#65972574>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -95,6 +95,7 @@ From {{inh|en|enm|consumen}}, from {{der|en|fro|consumer}}, from {{der|en|la|con
 * Finnish: {{t+|fi|kuluttaa}}, {{t+|fi|syödä}}
 * French: {{t+|fr|consommer}}
 * Galician: {{t|gl|consumir}}
+* German: {{t+|de|verzehren}}
 * Greek: {{t+|el|καταναλώνω}}
 * Hebrew: {{t+|he|צרך|tr=tsarákh}}
 * Hindi: {{t|hi|उपभोग करना}}
