--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -57,7 +57,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 *: Mandarin: {{t+|cmn|獾|tr=huān}}
 * Chuvash: {{t|cv|пурӑш}}
 * Cimbrian: {{t|cim|daks|m}}
-* Cornish: {{t|kw|brogh|f}}
+* Cornish: {{t|kw|brogh|m}}
 * Czech: {{t+|cs|jezevec|m}}
 * Danish: {{t+|da|grævling|c}}
 * Dutch: {{t+|nl|das|m}}
@@ -67,7 +67,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Faroese: {{t|fo|grevlingur|m}}
 * Finnish: {{t+|fi|mäyrä}}
 * French: {{t+|fr|blaireau|m}}
-* Friulian: {{t|fur|tac|?}}, {{t|fur|tas|?}}
+* Friulian: {{t|fur|tac|m}}, {{t|fur|tas|m}}
 * Galician: {{t+|gl|teixugo|m}}, {{t+|gl|porco teixo|m}}
 * Georgian: {{t|ka|მაჩვი}}
 * German: {{t+|de|Dachs|m}}
