--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -93,6 +93,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 |weightlifting
 |weight loss
 |weight of the world
+|weightometer
 |weight-saving
 |weight-watcher
 |weighty
