--- a/en/d/diablotin.741371.wikitext
+++ b/en/d/diablotin.741371.wikitext
@@ -1,3 +1,12 @@
+==English==
+
+===Noun===
+{{en-noun}}
+
+# The [[black-capped petrel]], ''[[Pterodroma hasitata]]'', of Caribbean waters.
+
+----
+
 ==French==
 
 ===Etymology===
