--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -316,7 +316,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Old English: {{tt|ang|swīn|n}}
 * Old Javanese: {{t|kaw|wők}}
 * Old Turkic: {{tt|otk|𐱃𐰆𐰭𐰆𐰕|ts=toŋuz}}
-* Oriya: {{tt|or|ଘୁଷୁରିଛୁଆ}}
+* Oriya: {{t|or|ଘୁଷୁରି}}, {{tt|or|ଘୁଷୁରିଛୁଆ}}
 * Oromo: {{t|om|booyee}}
 * Ossetian: {{tt|os|хуы}}
 * Ottawa: {{tt|otw|gookoosh}}
