--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -7,7 +7,7 @@ From {{der|en|frm|théorie}}, from {{der|en|LL.|theōria}}, from {{der|en|grc|θ
 * {{a|Received Pronunciation|General Australian}} {{IPA|en|/ˈθɪə.ɹi/|/ˈθiː.ə.ɹi/|/ˈθɪɹ.i/}}
 * {{a|General American}} {{IPA|en|/ˈθɪɚ.i/|/ˈθi.ə.ɹi/}}
 * {{audio|en|en-us-theory.ogg|Audio (US)}}
-*: {{rhymes|en|ɪəɹi|iəɹi|s1=2|s2=3}}
+*: {{rhymes|en|ɪəɹi|iːəɹi|s1=2|s2=3}}
 
 ===Noun===
 {{en-noun|~}}
