Added Estonian entry for an inflected form of "andma" <annate#66040366>

--- a/en/a/annate.745877.wikitext
+++ b/en/a/annate.745877.wikitext
@@ -23,6 +23,16 @@ See {{m|en|ann}}.
 
 ----
 
+==Estonian==
+
+===Verb===
+
+{{head|et|verb form}}
+
+# {{et-form of|andma|pr=second-person|pl=plural|mood=indicative|tense=present}}
+
+----
+
 ==Italian==
 
 ===Noun===
