--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -208,7 +208,7 @@ From {{der|de|en|CD}}.
 * {{audio|de|De-CD.ogg|Audio}}
 
 ===Noun===
-{{de-noun|f,s:'s:-}}
+{{de-noun|f,s:-:'s[proscribed]}}
 
 # [[#English|CD]] ([[compact disc]])
 
