t+fi:[[takavarikoida]] t+fi:[[ottaa haltuun]] t+fi:[[vallata]] t-balance t+fi:[[iskeä]] t+fi:[[[[saada]] [[kohtaus]]]] t+fi:[[juuttua]] t+fi:[[jumittua]] t+fi:[[[[leikata]] [[kiinni]]]] ([[WT:EDIT|Assisted]]) <seize#66055344>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -144,7 +144,7 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 * Dutch: {{t|nl|in beslag nemen}}, {{t|nl|beslag leggen op}}
 * Esperanto: {{t+|eo|konfiski}}
 * Estonian: {{t-needed|et}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|takavarikoida}}, {{t|fi|ottaa haltuun}}
 * French: {{t+|fr|saisir}}, {{t|fr|[[emparer|s'emparer de]]}}
 * German: {{t+|de|beschlagnahmen}}
 {{trans-mid}}
@@ -166,14 +166,16 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 
 {{trans-top|to have a sudden and powerful effect upon}}
 * Bulgarian: {{t+|bg|обземам}}
+* Finnish: {{t+|fi|vallata}}, {{t+|fi|iskeä}} {{qualifier|+ illative}}
 * French: {{t+|fr|saisir}}
-* German: {{t+|de|erfassen}}, {{t+|de|packen}}, {{t+|de|ergreifen}}
 {{trans-mid}}
+* German: {{t+|de|erfassen}}, {{t+|de|packen}}, {{t+|de|ergreifen}}
 * Portuguese: {{t|pt|[[tomar conta]] [[de]]}}, {{t|pt|[[apoderar]]-[[se]] [[de]]}}
 {{trans-bottom}}
 
 {{trans-top|to have a seizure}}
 * Czech: {{t|cs|mít záchvat|impf}}, {{t|cs|dostat záchvat|pf}}
+* Finnish: {{t+|fi|[[saada]] [[kohtaus]]}}
 * German: {{t+|de|krampfen}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|convulsionar}}, {{t|pt|[[convulsionar]]-[[se]]}}, {{t|pt|convulsar}}, {{t|pt|convelir}},
@@ -182,9 +184,10 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 
 {{trans-top|to bind or lock in position}}
 * Bulgarian: {{t+|bg|заяждам}}
+* Finnish: {{t+|fi|juuttua}}, {{t+|fi|jumittua}}, {{t+|fi|[[leikata]] [[kiinni]]}} {{qualifier|of a motor or machine}}
 * French: {{t+|fr|se gripper}} {{qualifier|of a motor or other machine}}
-* German: {{t+|de|stocken}}, {{t|de|festgehen}}
 {{trans-mid}}
+* German: {{t+|de|stocken}}, {{t|de|festgehen}}
 * Maori: {{t|mi|parerori}} {{qualifier|as with muscles during a cramp}}
 {{trans-bottom}}
 
