--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -87,8 +87,8 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Aymara: {{t|ay|wat’a}}
 * Azerbaijani: {{t+|az|ada}}
 * Baba Malay: {{t|mbf|pulo}}
-* Baekje: {{t|pkc|斯麻|tr=sama}}, {{t|pkc|斯麻|tr=*syema or *sjema}}, {{t|pkc|
-*syema or *sjema|alt=セマ}}
+* Baekje: {{t|pkc|斯麻|tr=*syema or *sjema}}, {{t|pkc|セマ|
+tr=*syema or *sjema}}
 * Balinese: {{t|ban|pulo}}, {{t|ban|nusa}}
 * Bashkir: {{t|ba|утрау}}
 * Basque: {{t+|eu|irla}}, {{t+|eu|uharte}}
