===Etymology 3===  ====Noun==== {{en-noun|-}}  # {{archaic form of|en|attar}} #* '''1809''', William Jones, ''A Grammar of the Persian Language'' (page 8) #*: {{...}} the precious perfume called '''''otter''' of roses''. <otter#66070420>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -202,6 +202,15 @@ Corruption of {{m|en|annotto}}.
 
 # {{lb|en|obsolete}} [[annatto]] {{gloss|dye}}
 
+===Etymology 3===
+
+====Noun====
+{{en-noun|-}}
+
+# {{archaic form of|en|attar}}
+#* '''1809''', William Jones, ''A Grammar of the Persian Language'' (page 8)
+#*: {{...}} the precious perfume called '''''otter''' of roses''.
+
 ====References====
 * Webster 1913 [http://www.webster-dictionary.org/definition/otter]
 
