--- a/en/s/safety car.802710.wikitext
+++ b/en/s/safety car.802710.wikitext
@@ -13,5 +13,11 @@
 ====Derived terms====
 * {{l|en|virtual safety car}}
 
+====Translations====
+{{trans-top|car to restrict speed in car race}} 
+* Finnish: {{t|fi|turva-auto}} 
+{{trans-mid}} 
+{{trans-bottom}} 
+
 ====References====
 * http://www.formula1.com/inside_f1/understanding_the_sport/5300.html
