--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -7,7 +7,7 @@
 * {{alter|en|bambu}} {{q|obsolete}}
 
 ===Etymology===
-Borrowed from {{bor|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|bambu}}, from {{der|en|kn|ಬಂಬು}}. {{etystub|en}}
+Borrowed from {{bor|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|bambu}}, from {{der|en|kn|ಬಂಬು}}. In turn from {{inh|ta|dra-pro|*wēmpu||[[neem]]}}. Cognate with {{cog|ml|വേപ്പ്}}, {{cog|te|వేప}}, {{cog|kn|ಬೇವು}}.  {{etystub|en}}
 
 ===Pronunciation===
 * {{IPA|en|/bæmˈbu/}}
