--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -17,13 +17,13 @@
 ====Translations====
 {{trans-top|soldier or combatant captured by the enemy}}
 * Albanian: {{t|sq|rob lufte|m}}
-* Arabic: {{t|ar|أَسِير اَلْحَرْب|m}}, {{t|ar|أَسِير|m}}
+* Arabic: {{t|ar|أَسِير الْحَرْب|m}}, {{t|ar|أَسِير|m}}
 * Armenian: {{t+|hy|ռազմագերի}}
 * Belarusian: {{t|be|ваеннапало́нны}}, {{t|be|пало́нны|m}}
 * Bulgarian: {{t|bg|военнопле́нник|m}}
 * Burmese: {{t|my|စစ်သုံ့ပန်း}}, {{t+|my|သုံ့ပန်း}}
 * Chinese:
-*: Mandarin: {{t+|zh|戰俘|sc=Hani}}, {{t+|zh|战俘|tr=zhànfú|sc=Hani}}, {{t+|zh|俘虜|sc=Hani}}, {{t+|zh|俘虏|tr=fúlǔ|sc=Hani}}
+*: Mandarin: {{t+|zh|戰俘}}, {{t+|zh|战俘|tr=zhànfú}}, {{t+|zh|俘虜}}, {{t+|zh|俘虏|tr=fúlǔ}}
 * Czech: {{t+|cs|zajatec|m}}, {{t|cs|válečný zajatec|m}}
 * Dutch: {{t+|nl|krijgsgevangene|m|f}}, {{t|nl|oorlogsgevangene|m|f}}
 * Estonian: {{t|et|sõjavang}}
@@ -42,15 +42,15 @@
 * Interlingua: {{t|ia|prisionero de guerra}}
 {{trans-mid}}
 * Italian: {{t|it|prigioniero di guerra|m}}, {{t|it|prigioniera di guerra|f}}
-* Japanese: {{t+|ja|捕虜|tr=ほりょ, horyo|sc=Jpan}}
-* Korean: {{t|ko|[[전쟁]] [[포로]]}}, {{t+|ko|포로}}
+* Japanese: {{t+|ja|捕虜|tr=ほりょ, horyo}}
+* Korean: {{t|ko|[[전쟁]] [[포로]](戰爭捕虜)}}, {{t+|ko|포로(捕虜)}}
 * Latin: {{t|la|dēditīcius|m}}
 * Malay: {{t|ms|tahanan perang}}
 * Navajo: {{t|nv|yisnááh}}
 * Norwegian:
 *: Bokmål: {{t|nb|krigsfange|m}}
 *: Nynorsk: {{t+|nn|krigsfange|m}}
-* Persian: {{t+|fa|اسیر|tr=asir|sc=fa-Arab}}
+* Persian: {{t+|fa|اسیر|tr=asir}}
 * Polish: {{t|pl|jeniec wojenny|m-pr}}
 * Portuguese: {{t|pt|prisioneiro de guerra|m}}, {{t|pt|prisioneira de guerra|f}}
 * Russian: {{t+|ru|военнопле́нный|m}}, {{t+|ru|пле́нный|m}}
