--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -44,9 +44,11 @@
 * Interlingua: {{t|ia|prisionero de guerra}}
 * Italian: {{t|it|prigioniero di guerra|m}}, {{t|it|prigioniera di guerra|f}}
 * Japanese: {{t+|ja|捕虜|tr=ほりょ, horyo}}
+* Kazakh: {{t|kk|соғыс тұтқыны}}, {{t|kk|әскери тұтқын}}
 * Korean: {{t|ko|[[전쟁]] [[포로]](戰爭捕虜)}}, {{t+|ko|포로(捕虜)}}
-* Latin: {{t|la|dēditīcius|m}}
 {{trans-mid}}
+* Kyrgyz: {{t|ky|согуш туткуну}}
+* Latin: {{t|la|dēditīcius|m}}
 * Latvian: {{t|lv|karagūsteknis|m}}
 * Malay: {{t|ms|tahanan perang}}
 * Navajo: {{t|nv|yisnááh}}
