No need to repeat "Kannada" twice <bamboo#66103720>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -7,7 +7,7 @@
 * {{alter|en|bambu}} {{q|obsolete}}
 
 ===Etymology===
-Borrowed from {{bor|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|bambu}}, from {{der|en|kn|ಬಂಬು}}, variant form of {{cog|kn|ಬೇವು}}. Cognate with {{cog|ml|വേപ്പ്}}, {{cog|te|వేప}}, from {{inh|ta|dra-pro|*wēmpu||[[neem]]}}.
+{{bor+|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|bambu}}, from {{der|en|kn|ಬಂಬು}}, variant form of {{m|kn|ಬೇವು}}. Cognate with {{cog|ml|വേപ്പ്}}, {{cog|te|వేప}}, from {{inh|ta|dra-pro|*wēmpu||[[neem]]}}.
 
 ===Pronunciation===
 * {{IPA|en|/bæmˈbu/}}
