t+bg:[[после]] t+bg:[[след това]] t+bg:[[тогава]] t+bg:[[тогавашен]] t+bg:[[това време]] ([[WT:EDIT|Assisted]]) <then#66105269>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -145,6 +145,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Armenian: {{t+|hy|հետո}}
 * Azerbaijani: {{t+|az|sonra}}
 * Belarusian: {{t|be|заты́м}}
+* Bulgarian: {{t+|bg|после}}
 * Catalan: {{t+|ca|després}}, {{t+|ca|llavors}}
 * Chinese:
 *: Mandarin: {{t+|cmn|接著|sc=Hani}}, {{t+|cmn|接着|tr=jiēzhe|sc=Hani}}
@@ -223,6 +224,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Armenian: {{t+|hy|հետո}}
 * Assamese: {{t|as|তাৰ পাছত}}
 * Bengali: {{t|bn|এরপর}}, {{t|bn|তারপর}}
+* Bulgarian: {{t|bg|след това}}
 * Catalan: {{t+|ca|després}}
 * Chinese:
 *: Mandarin: {{t+|cmn|接著|sc=Hani}}, {{t+|cmn|接着|tr=jiēzhe|sc=Hani}}, {{t+|cmn|然後|sc=Hani}}, {{t+|cmn|然后|tr=ránhòu|sc=Hani}}, {{t+|cmn|就|tr=jiù|sc=Hani}}
@@ -276,6 +278,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Assamese: {{t|as|তেনেহ’লে}}, {{t|as|তেন্তে}}, {{t|as|তে}}
 * Belarusian: {{t|be|тады́}}, {{t|be|дык}}, {{t|be|то}}, {{t|be|у такі́м вы́падку}}, {{t|be|у такі́м ра́зе}}
 * Breton: {{t+|br|neuze}}
+* Bulgarian: {{t+|bg|тогава}}
 * Catalan: {{t+|ca|llavors}}
 * Chinese:
 *: Mandarin: {{t+|cmn|那麼|sc=Hani}}, {{t+|cmn|那么|tr=nàme|sc=Hani}}, {{t+|cmn|便|tr=biàn|sc=Hani}}
@@ -377,6 +380,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 
 ====Translations====
 {{trans-top|being so at that time}}
+* Bulgarian: {{t|bg|тогавашен}}
 * Danish: {{t|da|daværende}}
 * Dutch: {{t+|nl|toenmalig}}
 * Esperanto: {{t|eo|tiama}}
@@ -404,6 +408,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 
 ====Translations====
 {{trans-top|that time}}
+* Bulgarian: {{t|bg|това време}}
 * Finnish: {{t+|fi|se}}
 * Georgian: {{t-needed|ka}}
 * Portuguese: {{t+|pt|então}}
