--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -355,13 +355,19 @@ From {{inh|nn|non|hvat}}, from {{inh|nn|gem-pro|*hwat}}.
 ====Adjective====
 {{vi-adj}}
 
-# [[last#Adjective|last]]
+# {{l|en|last}} {{gloss|most recent}}
+
+=====Synonyms=====
+* {{sense|last}} {{vi-l|vừa rồi}}
 
 ====Verb====
 {{vi-verb|戈}}
 
 # {{lb|vi|intransitive}} To be [[gone]].
 # {{lb|vi|intransitive}} To [[cross#Verb|cross]].
+
+=====Derived terms=====
+{{vi-der|băng qua|đi qua}}
 
 ===Etymology 2===
 {{vi-etym-sino|我|hv=n||ngã}}.
@@ -371,10 +377,6 @@ From {{inh|nn|non|hvat}}, from {{inh|nn|gem-pro|*hwat}}.
 
 # {{lb|vi|archaic|men's speech|or|southern Vietnam}} [[I]]; [[me]]
 #: {{ux|vi|Hôm qua '''qua''' bảo '''qua''' qua mà '''qua''' không qua. Hôm nay '''qua''' không bảo '''qua''' qua mà '''qua''' lại qua.|Yesterday ah said ah'd cuhm over but ah ain't cuhm. Today ah ain't say ah'd cuhm over but ah came.}}
-
-===Derived terms===
-* {{l|vi|băng qua}}
-* {{l|vi|đi qua}}
 
 ===References===
 <references/>
