Reverted edits by [[Special:Contributions/2607:FB91:38A:C55F:6D21:A6AB:3128:3DEB|2607:FB91:38A:C55F:6D21:A6AB:3128:3DEB]]. If you think this rollback is in error, please leave a message on my [[User talk:Surjection|talk page]]. <ios#66118299>

--- a/en/i/ios.746896.wikitext
+++ b/en/i/ios.746896.wikitext
@@ -1,4 +1,10 @@
 {{also|Ios|iOS|-ios|íos-}}
 ==English==
 
-===Noun=
+===Noun===
+{{head|en|noun form}}
+
+# {{plural of|en|io}}
+
+===Anagrams===
+* {{anagrams|en|a=ios|ISO|OIs|OSI|SOI|iso|iso-|soi}}
