t+lzz:[[ადა]] ([[WT:EDIT|Assisted]]) <island#66132088>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -205,6 +205,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Latgalian: {{qualifier|ocean, sea}} {{t|ltg|jiursola}}, {{qualifier|lake}} {{t|ltg|azarsola}}, {{qualifier|river}} {{t|ltg|upsola}}
 * Latin: {{t+|la|insula|f}}
 * Latvian: {{t+|lv|sala|f}}
+* Laz: {{t|lzz|ადა}}
 * Lingala: {{t|ln|esanga|c7|c8}}
 * Lithuanian: {{t+|lt|sala|f}}
 * Livonian: {{t|liv|sǭr}}
