--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -91,7 +91,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Balinese: {{t|ban|pulo}}, {{t|ban|nusa}}
 * Bashkir: {{t|ba|утрау}}
 * Basque: {{t+|eu|irla}}, {{t+|eu|uharte}}
-* Bats: {{t|bbl|გუბ}}
+* Bats: {{t|bbl|გუბ}}, {{t|bbl|კუნძულ}}
 * Belarusian: {{t|be|во́страў|m}}, {{t|be|вы́спа|f}}
 * Bengali: {{t|bn|দ্বীপ|sc=Beng|tr=dip}}, {{t|bn|জিঞ্জিরা|tr=jinjira}}
 * Bhojpuri: {{t|bho|द्वीप}}
