--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -117,6 +117,9 @@ Borrowed from {{bor|ro|ota|طوت|tr=tut, dut}}, from {{der|ro|fa|توت|tr=tut}
 
 # [[mulberry]] (tree)
 
+====Declension====
+{{ro-noun-m|pl=duzi}}
+
 ====Derived terms====
 * {{l|ro|dudă}}
 
