--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -57,7 +57,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 |kitchen island|Little Island|Long Island|low island|Mersea Island|no man is an island
 |Norfolk Island|North Island|Puget Island|Rhode Island|Rock Island
 |safety island|security island|Island|sea-island|South Island|Stewart Island|St. Lawrence Island
-|tidal island|traffic island|Valentia Island|Vancouver Island|White Island}}
+|tidal island|traffic island|Valentia Island|Vancouver Island|Wake Island|Wake's Island|White Island}}
 
 ====Related terms====
 * {{l|en|insular}}
