--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -3,7 +3,7 @@
 
 ===Etymology===
 {{root|en|ine-pro|*mey- (small)}}
-From {{der|en|la|minimum}}, neuter form of {{m|la|minimus||least, smallest}}.
+{{lbor|en|la|minimum}}, neuter form of {{m|la|minimus|t=least, smallest}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ˈmɪn.ɪ.məm/}}
@@ -96,9 +96,7 @@ From {{der|en|la|minimum}}, neuter form of {{m|la|minimus||least, smallest}}.
 {{en-adj|-}}
 
 # To the lowest degree.
-
-====Synonyms====
-* {{l|en|minimal}}
+#: {{syn|en|minimal}}
 
 ====Translations====
 {{trans-top|lowest degree}}
@@ -128,6 +126,7 @@ From {{der|en|la|minimum}}, neuter form of {{m|la|minimus||least, smallest}}.
 {{trans-bottom}}
 
 [[Category:English nouns with irregular plurals]]
+[[Category:English unadapted borrowings from Latin]]
 
 ----
 
