--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -32,10 +32,10 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|en|adjust|ment}}.
 {{trans-top|action of adjusting}}
 * Finnish: {{t+|fi|säätäminen}}, {{t+|fi|säätö}}
 * German: {{t|de|Anpassen|n}}, {{t|de|[[geringfügiges]] [[Ändern]]|n}}
-* Hungarian: {{t+|hu|beállítás}}
+* Hungarian: {{t+|hu|beállítás}}, {{t+|hu|szabályozás}}, {{t|hu|hangolás}}, {{t|hu|finombeállítás}}, {{t|hu|finomhangolás}}, {{t+|hu|igazítás}}, {{t|hu|kiigazítás}}, {{t|hu|korrigálás}}, {{t+|hu|helyesbítés}}, {{t+|hu|módosítás}}, {{t+|hu|változtatás}}
+{{trans-mid}}
 * Malayalam: {{t+|ml|ക്രമീകരണം}}
 * Manx: {{t|gv|kiartagh|m}}, {{t|gv|cochiartagh|m}}
-{{trans-mid}}
 * Maori: {{t|mi|whakarerekētanga}}
 * Norwegian:
 *: Bokmål: {{t|nb|justering|m|f}}
@@ -59,11 +59,11 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|en|adjust|ment}}.
 * Greek: {{t+|el|διευθέτηση|f}}, {{t+|el|ρύθμιση|f}}, {{t+|el|προσαρμογή|f}}, {{t|el|διαβάθμηση|f}}
 * Guaraní: {{t-needed|gn}}
 * Hebrew: {{t+|he|כִּוּוּן|m}}
-* Hungarian: {{t+|hu|beállítás}}
+* Hungarian: {{t+|hu|beállítás}}, {{t+|hu|módosítás}}, {{t|hu|kiigazítás}}, {{t+|hu|igazítás}}, {{t+|hu|változtatás}}, {{t|hu|korrekció}}, {{t|hu|revízió}}, {{t|hu|korrigálás}}, {{t+|hu|helyesbítés}}
 * Interlingua: {{t|ia|adjustamento}}
+{{trans-mid}}
 * Irish: {{t|ga|gabháil|m}}, {{t|ga|ceartú|m}}, {{t|ga|inleadh|m}}
 * Italian: {{t+|it|adattamento|m}}, {{t+|it|inserimento|m}}
-{{trans-mid}}
 * Japanese: {{t+|ja|調整|tr=ちょうせい, chōsei|sc=Jpan}}, {{t+|ja|調節|tr=ちょうせつ, chōsetsu|sc=Jpan}}
 * Korean: {{t-needed|ko}}
 * Kyrgyz: {{t+|ky|жөнгө салуу}}, {{t+|ky|ыңгайлаштыруу}}, {{t|ky|ылайыктоо}}
@@ -88,22 +88,25 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|en|adjust|ment}}.
 
 {{trans-top|settling or balancing of a financial account}}
 * Finnish: {{t+|fi|korjaus}}
+* Hungarian: {{t+|hu|kiegyenlítés}}, {{t+|hu|jóváírás}}, {{t+|hu|megtérítés}}, {{t+|hu|visszatérítés}}
+{{trans-mid}}
 * Norwegian:
 *: Bokmål: {{t|nb|korrigering|m|f}}
-{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|process of balancing conflicting needs}}
 * Finnish: {{t+|fi|sopeutuminen}}
+* Hungarian: {{t+|hu|alkalmazkodás}}, {{t|hu|igazodás}}
+{{trans-mid}}
 * Norwegian:
 *: Bokmål: {{t+|nb|omstilling|m|f}}
-{{trans-mid}}
 * Russian: {{t+|ru|адапта́ция|f}}
 {{trans-bottom}}
 
 {{trans-top|assessment or settlement by an insurance company}}
 * Finnish: {{t+|fi|arviointi}} {{qualifier|assessment}}; {{t+|fi|korvaus}}, {{t+|fi|korvaaminen}} {{qualifier|settlement}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|elintézés}}, {{t+|hu|rendezés}}, {{t|hu|kárrendezés}}
 {{trans-bottom}}
 
 ===See also===
