--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -37,6 +37,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 |title=[http://www.theguardian.com/education/2013/jul/01/education-michael-gove-finland-gcse Finland spreads word on schools]
 |passage=Imagine a country where children do nothing but play until they start compulsory schooling at age seven. '''Then''', without exception, they attend comprehensives until the age of 16. Charging school fees is illegal, and so is sorting pupils into ability groups by streaming or setting.}}
 # {{lb|en|conjunctive}} In that case.
+#* {{quote-book|1=en|year=1859|title=[[w:Rubaiyat of Omar Khayyam|The Rub&aacute;iy&aacute;t of Omar Khayy&aacute;m: The Astronomer-Poet of Persia]]|author=Edward Fitzgerald|authorlink=Edward Fitzgerald|page=1|text=And, as the Cock crew, those who stood before<br>The Tavern shouted — "Open '''then''' the Door!<br>You know how little while we have to stay,<br>And, once departed, may return no more."}}
 #: {{ux|en|If it’s locked, '''then''' we’ll need the key.}}
 #: {{ux|en|Is it 12 o'clock already? '''Then''' it's time for me to leave.}}
 #: {{ux|en|You don't like potatoes? What do you want me to cook, '''then'''?}}
