--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,5 +1,6 @@
 {{also|⺼|冃|🈷|㈪|㊊|🈷️}}
 {{character info/subpage}}
+{{character info/subpage|⽉}}
 {{commonscat}}
 ==Translingual==
 {{stroke order|strokes=4}}
