--- a/en/s/softheaded.774556.wikitext
+++ b/en/s/softheaded.774556.wikitext
@@ -17,6 +17,9 @@
 ====Synonyms====
 * {{l|en|soft in the head}}
 
+====See also====
+* {{l|en|queer in the head}}
+
 ===References===
 * {{R:Dictionary.com}}
 * "[http://www.wordsmyth.net/live/home.php?script=search&matchent=softheaded&matchtype=exact softheaded]" in the ''Wordsmyth Dictionary-Thesaurus'' © Wordsmyth 2002.
