/* English */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <even so#66169165>

--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -7,7 +7,7 @@
 {{en-adv|-}}
 
 # [[in spite of|In spite of]] [[precede|preceding]] a remark (or fact) within a given discourse.
-#: ''His ideas are all wrong. '''Even so''', I want to agree with him.''
+#: {{ux|en|His ideas are all wrong. '''Even so''', I want to agree with him.}}
 #* {{quote-text|en|year=1928|author={{w|D. H. Lawrence}}|title=Lady Chatterley's Lover|chapter=4|passage="What's wrong with rabbits? Are they any worse than a neurotic, revolutionary humanity, full of nervous hate?"}}
 #*: "But we're not rabbits, '''even so'''," said Hammond.
 #* '''1997''' Feb. 13, Scot Woods, "[http://content.time.com/time/nation/article/0,8599,7666,00.html The Not-So Friendly Skies]," ''Time'' <small>(retrieved 27 Oct 2015)</small>:
@@ -15,11 +15,8 @@
 #* '''2009''' Dec. 25, {{w|Paul Krugman}}, "[http://www.nytimes.com/2009/12/25/opinion/25krugman.html Tidings of Comfort]," ''New York Times'' <small>(retrieved 27 Oct 2015)</small>:
 #*: But reform legislation enacted in 2010 . . . created a system of subsidies to help families pay for coverage. '''Even so''', insurance doesn’t come cheap.
 # {{lb|en|archaic}} In [[exactly]] such a manner (as said or surmised); of exactly such a nature.
-#* {{circa|1598}} {{w|William Shakespeare}}, ''King Henry V'', act 4, scene 1:
-#*: ''Pistol:'' Trail'st thou the puissant pike?
-#*: ''King Henry V:'' '''Even so'''. What are you?
-#* {{quote-text|en|year=1850|author={{w|Nathaniel Hawthorne}}|title=The Scarlet Letter|chapter=17|passage="Hester! Hester Prynne!", said he; "is it thou? Art thou in life?"}}
-#*: "'''Even so'''," she answered.
+#* {{RQ:Shakespeare Henry 5|4|1|text=''Pistol:'' Trail'st thou the puissant pike?<br>''King Henry V:'' '''Even so'''. What are you?}}
+#* {{quote-text|en|year=1850|author={{w|Nathaniel Hawthorne}}|title=The Scarlet Letter|chapter=17|passage="Hester! Hester Prynne!", said he; "is it thou? Art thou in life?"<br>"'''Even so'''," she answered.}}
 #* {{quote-text|en|year=1857|author={{w|Herman Melville}}|title=The Confidence Man|chapter=14|passage=He may be thought inconsistent, and '''even so''' he is.}}
 #* {{quote-text|en|year=1895|author={{w|Kenneth Grahame}}|title=The Golden Age|chapter=13|passage=What a strange thing, I mused, was this smoking, that takes a man suddenly, be he in the court, the camp, or the grove, grips him like an Afreet, and whirls him off to do its imperious behests! Would it be '''even so''' with myself, I wondered, in those unknown grown-up years to come?}}
 
