--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -98,6 +98,7 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 * Mongolian: {{t-needed|mn}}
 * Norwegian: {{t+|no|bøye}}
 * Occitan: {{t+|oc|corbar}}, {{t+|oc|plegar}}
+* Old English: {{t|ang|bīeġan}}
 * Persian: {{t-needed|fa}}
 * Polish: {{t+|pl|zgiąć|pf}}, {{t+|pl|zginać|impf}}, {{t+|pl|giąć|impf}}
 * Portuguese: {{t+|pt|dobrar}}, {{t+|pt|curvar}}
@@ -132,6 +133,7 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 * Japanese: {{t+|ja|曲がる|tr=magaru}}
 * Middle English: {{t|enm|croken}}
 * Occitan: {{t|oc|se corbar}}, {{t|oc|se plegar}}
+* Old English: {{t|ang|būgan}}
 {{trans-mid}}
 * Polish: {{t|pl|[[zginać|zginać się]]|impf}}, {{t|pl|[[zgiąć|zgiąć się]]|pf}}
 * Portuguese: {{t|pt|dobrar-se}}, {{t|pt|curvar-se}}
@@ -150,6 +152,7 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 
 {{trans-top|to cause to change direction}}
 * Finnish: {{t+|fi|kääntää}}
+* Old English: {{t|ang|bīeġan}}
 {{trans-mid}}
 * Thai: {{t+|th|เบน}}
 {{trans-bottom}}
@@ -163,6 +166,7 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 {{trans-mid}}
 * Mandarin: {{t+|cmn|轉彎|sc=Hani}}
 * Occitan: {{t+|oc|virar}}
+* Old English: {{t|ang|būgan}}
 * Portuguese: {{t+|pt|virar}}, {{t+|pt|curvar}}
 * Scottish Gaelic: {{t|gd|lùb}}
 * Thai: {{t+|th|เบน}}
@@ -191,6 +195,7 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 * Interlingua: {{t|ia|inclinar se}}
 {{trans-mid}}
 * Middle English: {{t|enm|croken}}
+* Old English: {{t|ang|būgan}}
 * Sanskrit: {{t+|sa|नमति}}
 * Spanish: {{t+|es|inclinarse}}
 {{trans-bottom}}
@@ -201,6 +206,7 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 * Finnish: {{t+|fi|taivuttaa}}
 * French: {{t+|fr|plier|alt=faire plier}}, {{t+|fr|soumettre}}
 * Occitan: {{t|oc|far plegar}}, {{t+|oc|obligar}}
+* Old English: {{t|ang|bīeġan}}
 * Portuguese: {{t+|pt|obrigar}}
 {{trans-mid}}
 * Spanish: {{t+|es|doblegar}}, {{t+|es|someter}}
@@ -214,6 +220,7 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 * Finnish: {{t+|fi|antaa periksi}}
 * French: {{t+|fr|plier|alt=se plier}}, {{t+|fr|soumettre|alt=se soumettre}} {{qualifier|pronominal}}
 {{trans-mid}}
+* Old English: {{t|ang|būgan}}
 * Spanish: {{t+|es|someterse}} {{qualifier|pronominal}}
 {{trans-bottom}}
 
