--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -85,9 +85,9 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 * Japanese: {{t+|ja|曲げる|tr=mageru}}
 * Khmer: {{t-needed|km}}
 * Korean: {{t+|ko|구부리다}}
-{{trans-mid}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|چەماندن}}
+{{trans-mid}}
 * Latgalian: {{t|ltg|salīkt}}, {{t|ltg|puorlīkt}}
 * Latin: {{t|la|flectō}}, {{t|la|sinuō}}, {{t|la|curvō}}
 * Latvian: {{t|lv|saliekt}}
@@ -163,8 +163,8 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 * Finnish: {{t+|fi|kääntyä}}
 * French: {{t+|fr|tourner}}
 * Italian: {{t+|it|piegarsi}}, {{t|it|curvarsi}}
-{{trans-mid}}
 * Mandarin: {{t+|cmn|轉彎|sc=Hani}}
+{{trans-mid}}
 * Occitan: {{t+|oc|virar}}
 * Old English: {{t|ang|būgan}}
 * Portuguese: {{t+|pt|virar}}, {{t+|pt|curvar}}
@@ -182,6 +182,7 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 {{trans-top|to stoop}}
 * Finnish: {{t+|fi|kumartua}}
 * French: {{t+|fr|baisser|alt=se baisser}}, {{t+|fr|pencher|alt=se pencher}} {{qualifier|pronominal}}
+* Old English: {{t|ang|būgan}}
 {{trans-mid}}
 * Sanskrit: {{t+|sa|नमति}}
 * Spanish: {{t+|es|agacharse}}
@@ -207,8 +208,8 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 * French: {{t+|fr|plier|alt=faire plier}}, {{t+|fr|soumettre}}
 * Occitan: {{t|oc|far plegar}}, {{t+|oc|obligar}}
 * Old English: {{t|ang|bīeġan}}
-* Portuguese: {{t+|pt|obrigar}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|obrigar}}
 * Spanish: {{t+|es|doblegar}}, {{t+|es|someter}}
 * Swahili: {{t+|sw|kunja}}
 * Swedish: {{t+|sv|kuva}}
