--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -334,7 +334,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 ====See also====
 {{top2}}
 * {{l|en|buck}}
-* {{l|en|cottontail}}
+* {{l|en|cottontail}} ({{taxlink|Sylvilagus|genus|ver=220318}} spp.)
 * {{l|en|doe}}
 * {{l|en|hare}}
 {{mid2}}
