--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -109,9 +109,8 @@ Cognate with {{cog|nl|kreuk||a bend, fold, wrinkle}}, {{cog|gml|kroke}}, {{m|gml
 {{en-verb}}
 
 # {{lb|en|transitive}} To [[bend]], or form into a hook.
-#: ''He '''crooked''' his finger toward me.''
-#* c. '''1600''', {{w|William Shakespeare}}, ''{{w|Hamlet}}'', Act III, Scene 2, [http://www.opensourceshakespeare.org/views/plays/play_view.php?WorkID=hamlet&Scope=entire&pleasewait=1&msg=pl]
-#*: No, let the candied tongue lick absurd pomp, / And '''crook''' the pregnant hinges of the knee / Where thrift may follow fawning.
+#: {{ux|en|He '''crooked''' his finger toward me.}}
+#* {{RQ:Shakespeare Hamlet|III|2|text=No, let the candied tongue lick absurd pomp, / And '''crook''' the pregnant hinges of the knee / Where thrift may follow fawning.}}
 #* '''1784''', {{w|William Blake}}, Songs from ''{{w|An Island in the Moon}}'', in ''Blake: The Complete Poems'', edited by W. H. Stevenson, Routledge, 3rd edition, 2007, p. 50,
 #*: For if a damsel's blind or lame, / Or nature's hand has '''crooked''' her frame, / Or if she's deaf or is wall-eyed; / Yet if her heart is well inclined, / Some tender lover she shall find / That panteth for a bride.
 #* '''1917''', [[w:Leo Tolstoy|Leo Tolstoy]], [[w:Constance Garnett|Constance Garnett]] (translator)'' [[s:Anna Karenina|Anna Karenina]]'', Part 4, Chapter 5,
