--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -30,6 +30,8 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 # {{lb|en|figurative|derogatory}} An institution awarding educational certificates not officially recognised
 # {{lb|en|informal}} An [[engine]].<!--{{R:ODO}}-->
 # {{lb|en|informal}} A boxing match, [[fistfight]].<!--{{R:ODO}}-->
+#* '''1848''', Charles Dickens, ''Dombey and Son''
+#*: {{...}} he is relieved from present responsibility to the Chicken, by the absence of that game head of poultry in the country, training (at Toots's cost) for his great '''mill''' with the Larkey Boy.
 #* {{RQ:Burroughs Mucker|passage=The name of the "white hope" against whom Billy was to go was sufficient to draw a fair house, and there were some there who had seen Billy in other fights and looked for a good '''mill'''.}}
 # {{lb|en|die sinking}} A hardened steel [[roller]] with a design in relief, used for imprinting a reversed copy of the design in a softer metal, such as copper.
 # {{lb|en|mining}} An excavation in rock, transverse to the workings, from which material for filling is obtained.
