--- a/en/s/stiff upper lip.803114.wikitext
+++ b/en/s/stiff upper lip.803114.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-American in origin; earliest known use in 1815.[https://books.google.com/books?id=mZASAAAAIAAJ&pg=PA509&dq=%22stiff+upper+lip%22]
+American in origin; earliest known use in 1811.[https://www.google.co.uk/books/edition/The_Olive_Branch_Or_Faults_on_Both_Sides/vG89AAAAYAAJ?hl=en&gbpv=1&dq=stiff+upper+lip&pg=PA237&printsec=frontcover]
 
 ===Pronunciation===
 * {{audio|en|En-au-stiff upper lip.ogg|Audio (AU)}}
