moved misplaced Translations section <automaniac#66198640>

--- a/en/a/automaniac.856209.wikitext
+++ b/en/a/automaniac.856209.wikitext
@@ -19,11 +19,11 @@ Of {{affix|en|auto|-maniac|t1=automobile|t2=one who experiences obsession}}.<ref
 #* {{quote-journal|en|1902||The Automaniac|Massachusetts Medical Journal||551|There seems to be need of a term to designate these new terrors of our streets, those speed crazed paranoiacs who are now doing so much to bring the automobile into disrepute.{{...}} The word “'''automaniac''',” suggested by ''The Horseless Age'', seems quite appropriate{{...}} Why not adopt the name “automania” for the disease and the '''automaniac''' to designate the person afflicted by it?|titleurl=https://babel.hathitrust.org/cgi/pt?id=mdp.39015076619421&view=1up&seq=581}}
 # A [[road hog]].
 
-===References===
-<references/>
-
-====Translations====
+=====Translations=====
 {{trans-top|an enthusiast of automobiles and motoring}}
 {{trans-mid}}
 * Polish: {{t|pl|automaniak|m}}, {{t|pl|automaniaczka|f}}
 {{trans-bottom}}
+
+===References===
+<references/>
