--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -21,7 +21,7 @@
 *: Nynorsk: {{t|nn|nordafrikansk}}
 * Polish: {{t+|pl|północnoafrykański|m}}
 * Romanian: {{t|ro|nord-african}}
-* Spanish: {{t|es|norteafricano|m}}
+* Spanish: {{t|es|norteafricano}}
 {{trans-bottom}}
 
 ===Noun===
