--- a/en/a/allochthonous.802822.wikitext
+++ b/en/a/allochthonous.802822.wikitext
@@ -35,7 +35,7 @@
 * Finnish: {{t|fi|alloktoninen}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|alóctone}}
-* Spanish: {{t+|es|alóctono|m}}
+* Spanish: {{t+|es|alóctono}}
 {{trans-bottom}}
 
 ===References===
