--- a/en/a/aphanitic.776754.wikitext
+++ b/en/a/aphanitic.776754.wikitext
@@ -19,7 +19,7 @@
 {{trans-top|having crystals too fine to be seen by the naked eye}}
 * Portuguese: {{t|pt|afanítico}}
 {{trans-mid}}
-* Spanish: {{t+|es|afanítico|m}}
+* Spanish: {{t+|es|afanítico}}
 {{trans-bottom}}
 
 ===See also===
