Translations: Spanish: removed gender tags from adjectives <prosodic#66200548>

--- a/en/p/prosodic.855423.wikitext
+++ b/en/p/prosodic.855423.wikitext
@@ -30,6 +30,6 @@
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|прозо̀дӣјскӣ|sc=Cyrl}}
 *: Roman: {{t+|sh|prozòdījskī}}
-* Spanish: {{t+|es|prosódico|m}}
+* Spanish: {{t+|es|prosódico}}
 * Swedish: {{t+|sv|prosodisk}}
 {{trans-bottom}}
