added [[Category:English two-letter abbreviations]] using [[Help:Gadget-HotCat|HotCat]] <CD#66207380>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -176,6 +176,7 @@ Borrowed from {{bor|cim|en|CD}}.
 {{fi-decl-maa-dot|CD|e|ä}}
 
 [[Category:Finnish initialisms]]
+[[Category:English two-letter abbreviations]]
 
 ----
 
