--- a/en/s/Smalltalk.775101.wikitext
+++ b/en/s/Smalltalk.775101.wikitext
@@ -5,9 +5,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{lb|en|computing}} An [[object-oriented]], [[dynamically-typed]], [[reflective]] [[programming language]].
-
-[[Category:en:Computer languages]]
+# {{lb|en|computer languages}} An [[object-oriented]], [[dynamically-typed]], [[reflective]] [[programming language]].
 
 ----
 
