/* Adjective */ slang sense, antonyms, formatting <durva#66218776>

--- a/en/d/durva.855097.wikitext
+++ b/en/d/durva.855097.wikitext
@@ -13,17 +13,22 @@
 {{hu-adj|comp=durvább}}
 
 # [[coarse]] {{gloss|of inferior quality}}
+#: {{ant|hu|finom}}
 # [[brusque]], [[rough]], [[rude]]
+#: {{ant|hu|figyelmes|tapintatos|gyengéd}}
+# {{lb|hu|slang}} [[extreme]], [[epic]], [[solid]], [[heavy]], [[gross]]
 
 ====Declension====
 {{hu-infl-nom|durvá|o}}
 
 ====Derived terms====
-* {{l|hu|durván}}
-* {{l|hu|durvaság}}
-* {{l|hu|durváskodik}}
-* {{l|hu|durvít}}
-* {{l|hu|durvul}}
+{{col4|hu
+|durván
+|durvaság
+|durváskodik
+|durvít
+|durvul
+}}
 
 ===References===
 <references/>
