t+nl:[[zijn eigen boontjes doppen]] t-balance ([[WT:EDIT|Assisted]]) <fend for oneself#66220999>

--- a/en/f/fend for oneself.742280.wikitext
+++ b/en/f/fend for oneself.742280.wikitext
@@ -10,6 +10,7 @@
 
 ====Translations====
 {{trans-top|to take care of oneself without help}}
+* Dutch: {{t|nl|zijn eigen boontjes doppen}}
 {{trans-mid}}
 * Spanish: {{t|es|buscarse la vida}}
 {{trans-bottom}}
