/* Proper noun */ <2 Samuel#66223930>

--- a/en/2/2 Samuel.801688.wikitext
+++ b/en/2/2 Samuel.801688.wikitext
@@ -56,6 +56,6 @@
 ==Spanish==
 
 ===Proper noun===
-{{es-proper noun|m}}
+{{es-proper noun|m|head=2 [[Samuel]]}}
 
 # {{lb|es|bible}} [[#English|2 Samuel]] {{gloss|book of the Bible}}
