--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -106,7 +106,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Russian: {{t+|ru|рискова́ть}}
 * Serbo-Croatian: {{t+|sh|kockati|alt=kȍckati se}}
 * Thai: {{t+|th|พนัน}}
-* Turkish: {{t-needed|tr}}
+* Turkish: {{t|tr|kumar oynamak}}
 * Walloon: fé ene {{t+|wa|wadjeure}}
 {{trans-bottom}}
 
@@ -141,10 +141,12 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Maori: {{t|mi|purei moni}}, {{t|mi|petipeti}}
 * Persian: {{t-needed|fa}}
 * Portuguese: {{t+|pt|apostar}}
+* Romanian: {{t+|ro|juca}}
 * Russian: {{t|ru|игра́ть в аза́ртные и́гры}}
 * Serbo-Croatian: {{t+|sh|kockati|alt=kȍckati se}}
 * Spanish: {{t+|es|apostar}}, {{t+|es|jugar}}
 * Thai: {{t+|th|พนัน}}
+* Turkish: {{t|tr|kumar oynamak}}
 * Walloon: {{t+|wa|trimler}}
 {{trans-bottom}}
 
