--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -25,6 +25,8 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 # A [[contiguous]] [[area]] of [[land]], smaller than a [[continent]], totally [[surround]]ed by [[water]].
 #* {{RQ:Donne Devotions|chapter=17. Meditation|page=98|lines=2–3|passage=No man is an '''''Iland''''', intire of it selfe; every man is a peece of the ''Continent'', a part of the ''maine''; {{...}}}}
 #* {{quote-book|en|year=2002|author=Gordon L. Rottman|title=World War 2 Pacific island guide|passage=Sumatra is the second largest '''island''' in the East Indies and the fourth largest in the world covering 182,859 square miles.}}
+# (by extension, in place names) A [[contiguous]] [[area]] of [[land]], smaller than a [[continent]], partially [[surround]]ed by [[water]]; A [[peninsula]]; A [[half-island]].
+#: {{ux|en|Despite its name, Barry '''Island''' is actually a peninsula}}
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself.
 #: {{ux|en|an '''island''' of tranquility}} (a calm place surrounded by a noisy environment)
 #: {{ux|en|an '''island''' of colors on a butterfly's wing}}
