--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -451,6 +451,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 #*: We paused at little river cities along the way and walked upon their bushy dikes, and heard tales of overflows in flood seasons, when four feet or more of water '''islanded''' the houses.
 #* {{quote-book|1=en|year=1956|year_published=1972|author=Anthony Burgess|authorlink=Anthony Burgess|title=Time for a Tiger|series=The Malayan Trilogy|page=138|passage=The car soon seemed '''islanded''' in water.}}
 # {{lb|en|transitive}} To set, dot (as if) with islands.
+#*: {{quote-book|en|year=1915|author=Edward Hutton|authorlink=Edward Hutton (writer)|title=Naples and Southern Italy|page=22|passage=This Apulia is a land of vast pastures and cornfields and olive gardens, '''islanded''' with many rich cities, notable if only for the splendour of their churches,[…]}}
 # {{lb|en|transitive}} To [[isolate]].
 #* '''1896''', {{w|A. E. Housman}}, {{w|A Shropshire Lad}}, XXVII, lines 1-2
 #*: ''High the vanes of {{w|Shrewsbury}} gleam''
