--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -452,6 +452,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 #* {{quote-book|1=en|year=1956|year_published=1972|author=Anthony Burgess|authorlink=Anthony Burgess|title=Time for a Tiger|series=The Malayan Trilogy|page=138|passage=The car soon seemed '''islanded''' in water.}}
 # {{lb|en|transitive}} To set, dot (as if) with islands.
 #*: {{quote-book|en|year=1915|author=Edward Hutton|authorlink=Edward Hutton (writer)|title=Naples and Southern Italy|page=22|passage=This Apulia is a land of vast pastures and cornfields and olive gardens, '''islanded''' with many rich cities, notable if only for the splendour of their churches,[…]}}
+#*: {{quote-book|en|year=1930|author=Rupert Hughes|authorlink=Rupert Hughes|title=Ladies’ Man|page=143|passage=She knew that the town was '''islanded''' with many waters - the Hudson, the Harlem and the East rivers, and the Bay - but the rivers were hard to find in the universal velvetiness.}}
 # {{lb|en|transitive}} To [[isolate]].
 #* '''1896''', {{w|A. E. Housman}}, {{w|A Shropshire Lad}}, XXVII, lines 1-2
 #*: ''High the vanes of {{w|Shrewsbury}} gleam''
