etyl cleanup <delimitate#66281621>

--- a/en/d/delimitate.741554.wikitext
+++ b/en/d/delimitate.741554.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|fr|en}} {{m|fr|délimiter}}, from {{etyl|LL.|en}} {{m|la|delimitare||to mark out the limits}}, from {{m|la|de-}} + {{m|la|limitare||to limit, bound}}; see [[limit]].
+From {{bor|en|fr|délimiter}}, from {{der|en|LL.|delimitare||to mark out the limits}}, from {{m|la|de-}} + {{m|la|limitare||to limit, bound}}; see [[limit]].
 
 ===Verb===
 {{en-verb}}
