Polish: Derived terms: converted to {{col3}} <automania#66283621>

--- a/en/a/automania.856205.wikitext
+++ b/en/a/automania.856205.wikitext
@@ -40,8 +40,8 @@ From {{af|pl|auto-|-mania}}.
 {{pl-decl-noun-f|tantum=s}}
 
 ====Derived terms====
-* {{q|nouns}} {{l|pl|automaniak}}, {{l|pl|automaniaczka}}
 
+{{col3|pl|title=nouns|automaniak|automaniaczka}}
 ===Further reading===
 * {{R:pl:WSJP}}
 * {{R:pl:PWN}}
