--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -654,7 +654,7 @@ From {{inh|osx|gem-pro|*batiz}}.
 
 {{col3|pl|title=noun|becik}}
 =====Related terms=====
-* {{q|noun}} {{l|pl|becikowe}}
+{{col3|pl|title=noun|becikowe}}
 
 ===Etymology 2===
 {{bor+|pl|he|בית|tr=béyt}}.
