--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -21,7 +21,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 #*: 'Now '''attend''' to me,' said Painted Jaguar, 'because this is very important. {{...}}
 # {{senseid|en|to turn one's consideration to, deal with}}{{lb|en|intransitive}} To turn one's [[consideration]] ({{m|en|to}}); to [[deal]] with (a task, problem, concern etc.), to look after. {{defdate|from 15th c.}}
 #: {{ux|en|Secretaries '''attend''' to correspondence.}}
-#* {{quote-book|en|year=1918| author={{w|W. B. Maxwell}}| chapter=15| title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]| passage=Edward Churchill still '''attended''' to his work in a hopeless mechanical manner like a sleep-walker who walks safely on a well-known round. But his Roman collar galled him, his cossack stifled him, his biretta was as uncomfortable as a merry-andrew's cap and bells.}}
+#* {{RQ:Maxwell Mirror and the Lamp|chapter=15|passage=Edward Churchill still '''attended''' to his work in a hopeless mechanical manner like a sleep-walker who walks safely on a well-known round. But his Roman collar galled him, his cossack stifled him, his biretta was as uncomfortable as a merry-andrew's cap and bells.}}
 # {{lb|en|ambitransitive}} To [[wait upon]] as a [[servant]] etc.; to accompany to assist (someone). {{defdate|from 15th c.}}
 #: {{ux|en|Valets '''attend''' to their employer's wardrobe.}}
 #: {{ux|en|Servants '''attend''' the king day and night.}}
