/* References */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <at#66331018>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1477,4 +1477,4 @@ From {{inh|yol|enm|eten}}, from {{inh|yol|ang|etan|}}, from {{inh|yol|gmw-pro|*e
 #* {{quote-book|yol|year=1867|title=GLOSSARY OF THE DIALECT OF FORTH AND BARGY|passage=Ich '''at''' mee dhree meales. |translation=I '''ate''' my three meals.}}
 
 ===References===
-* {{R:Poole 1867}}
+* {{R:Poole 1867|page=23}}
