--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -299,6 +299,10 @@ From {{inh|fr|fro|fraction}}, borrowed from {{bor|fr|la|fractio|fractio, fractio
 ====Related terms====
 * {{l|fr|fracture}}
 
+====Descendants====
+* {{desc|ro|fracțiune|bor=1}}
+* {{desc|tr|fraksiyon|bor=1}}
+
 ===Further reading===
 * {{R:TLFi}}
 
