--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -403,6 +403,8 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 {{en-verb}}
 
 # {{lb|en|informal|neologism}} {{rare form of|en|@|dot=;}} to reply to or talk to someone, either online or face-to-face. {{q|from the practice of targeting a message or reply to someone online by writing @''name''}}
+#* '''2022''': William Morris, ''Motley Vision''
+#*: If you have questions or observations on my discussion questions, feel free to reply to this email, '''at''' me on Twitter, or comment on the companion post on AMV.
 
 =====Usage notes=====
 Chiefly used in the phrase "don't @ me"/"don't at me". It can be used humorously when stated after an unpopular or ironic opinion, to forestall dissent.
