t+pl:[[bambus]] ([[WT:EDIT|Assisted]]) <bamboo#66341637>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -209,6 +209,7 @@
 *: Jawi: {{t|ms|بولوه}}, {{t|ms|بمبو}}, {{t|ms|اءور}}
 *: Rumi: {{t+|ms|buluh}}, {{t+|ms|bambu}}, {{t|ms|aur}}
 * Norman: {{t|nrf|bambou|m}}
+* Polish: {{t+|pl|bambus|m}}
 * Portuguese: {{t+|pt|bambu|m}}
 * Russian: {{t+|ru|бамбу́к|m}}, {{t|ru|бамбу́ковая трость|f}}
 * Scottish Gaelic: {{t|gd|bambù|m}}, {{t|gd|cuilc-Fhrangach|f}}
