/* Verb */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <leather#66356188>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -264,3 +264,6 @@ From {{inh|en|enm|lether}}, from {{inh|en|ang|leþer||leather}}, from {{inh|en|g
 {{head|yol|verb}}
 
 # {{alt form|yol|luther}}
+
+===References===
+* {{R:Poole 1867|page=55}}
