--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -481,7 +481,7 @@ Borrowed from {{bor|bcl|tl|at}}.
 ===Conjunction===
 {{head|bcl|conjunction}}  
 # {{lb|bcl|Daet}} [[and]]
-#: {{syn|bcl|asin|saka|buda|sagkod|nan}}
+#: {{syn|bcl|asin|saka|buda|sagkod|nan|tapos}}
 
 ----
 
