--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -113,7 +113,7 @@ Short for {{m|en|copper||police officer}}, itself from the verb {{m|en|cop|t=to 
 * Finnish: {{t+|fi|pollari}}, {{t+|fi|kyttä}}, {{t+|fi|poliisi}}, {{t+|fi|poliisimies}}, {{t+|fi|skoude}} {{q|slang}}
 * French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}}, {{t+|fr|poulet|m}}, {{t+|fr|police|f}} {{qualifier|Quebec}}
 * German: {{t+|de|Gendarm}}, {{t+|de|Bulle|m}}, {{t+|de|Polizist|m}}
-* Greek: {{t+|el|μπάτσος|m}}
+* Greek: {{t+|el|μπάτσος|m}}, {{t+|el|αστυφύλακας|m}}
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}}, {{t|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t+|hu|zsaru}}
 * Italian: {{t|it|piedipiatti}}, {{t+|it|poliziotto|m}}, {{t+|it|secondino|m}}, {{t+|it|sbirro|m}} {{qualifier|offensive}}
