--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -76,6 +76,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 #* {{RQ:Shakespeare Tempest|III|i|11|1|''[[w:Ferdinand (The Tempest)|Fer.]]'' I am, in my condition<br>A Prince (''Miranda'') I do thinke a King<br>(I would not ſo) and would no more endure<br>This wodden ſlauerie, then to ſuffer<br>The [[flesh-fly|fleſh-flie]] '''blow''' my mouth: heare my ſoule ſpeake.}}
 #* {{quote-book|1=en|year=1938|author=Norman Lindsay|authorlink=Norman Lindsay|title=Age of Consent|publisher=Ure Smith|location=Sydney|year_published=1962|page=78|passage=That decision was given an added kick by fury when he found that Podson had left the safe door open, and flies had '''blown''' the meat.}}
 # {{lb|en|intransitive}} (of a fly) To lay eggs; to breed
+#* {{quote-book|en|year=1807|author=Thomas Pike Lathy|title=Gabriel Forrester;or, The deserted son. A novel in four volumes|volume=2|publisher=Lewis and Hamblin|location=London|page=77|passage=[…] said the bookseller, “but I cannot risk the expence of your ''debut'' - There are critics without as well as within a theatre.” - I know it, said I, interrupting him; “men who, like flies '''blowing''' on a piece of wholesome meat, can convert it into carrion - […]}}
 #* {{quote-book|en|year=1843|author=William Hughes(Piscator)|authorlink=William Hughes (writer)|title=Fish, How to Choose and How to Dress|publisher=Longman, Green, Brown, and Longmans|location=London|page=41-42|passage=In Cornwall, a singular mode of curing conger, once prevailed, which was, merely to split the conger in halves, and, without any further preparation, to hang them up in a kind of shambles erected for that purpose, when the flies, '''blowing''' on the fish, the progeny would devour all the parts liable to decomposition, whilst the residue, being dried in the sun, became in this manner fit for use: and, when perfectly cured, where exported to Spain and Portugal. There they were ground into powder, and with this preparation, the natives of those Countries used to thicken their soups.}}
 # {{lb|en|obsolete}} To spread by report; to publish; to disclose.
 #* {{RQ:Dryden PAA}}
