--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -78,6 +78,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 # {{lb|en|intransitive}} (of a fly) To lay eggs; to breed
 #* {{quote-book|en|year=1807|author=Thomas Pike Lathy|title=Gabriel Forrester;or, The deserted son. A novel in four volumes|volume=2|publisher=Lewis and Hamblin|location=London|page=77|passage=[…] said the bookseller, “but I cannot risk the expence of your ''debut'' - There are critics without as well as within a theatre.” - I know it, said I, interrupting him; “men who, like flies '''blowing''' on a piece of wholesome meat, can convert it into carrion - […]}}
 #* {{quote-book|en|year=1843|author=William Hughes(Piscator)|authorlink=William Hughes (writer)|title=Fish, How to Choose and How to Dress|publisher=Longman, Green, Brown, and Longmans|location=London|page=41-42|passage=In Cornwall, a singular mode of curing conger, once prevailed, which was, merely to split the conger in halves, and, without any further preparation, to hang them up in a kind of shambles erected for that purpose, when the flies, '''blowing''' on the fish, the progeny would devour all the parts liable to decomposition, whilst the residue, being dried in the sun, became in this manner fit for use: and, when perfectly cured, where exported to Spain and Portugal. There they were ground into powder, and with this preparation, the natives of those Countries used to thicken their soups.}}
+#* {{quote-journal|en|year=1921|title=The British Veterinary Journal|publisher=Ballière Tindall|volume=77|page=29|passage=[…]and often after they drop off the punctured skins are the seats of maggots, etc., owing to flies '''blowing''' on these injuries.}}
 # {{lb|en|obsolete}} To spread by report; to publish; to disclose.
 #* {{RQ:Dryden PAA}}
 #*: Through the court his courtesy was '''blown'''.
