--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -48,6 +48,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 #* {{quote-text|en|year=2007|author=Ilene Schneider|title=Chanukah Guilt|page=106|passage=The only message at home was from my nephew, letting me know my mother was back home, safe and sound, except for a sore "'''Nintendo''' thumb".}}
 #* '''2007''', Anthony Ham and Alison Bing, ''Morocco'', Lonely Planet, {{ISBN|1740599748}}, page 34:
 #*: He was far more interested in bullfighting, which was the '''Nintendo''' of the day, only considerably more dangerous<!--;-->
+# {{lb|en|video games|by extension}} Any video game console, especially by those not familiar with video games.
 
 ====Derived terms====
 * {{l|en|Nintendinitis}}
