/* Noun */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <bid#66376480>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -273,7 +273,7 @@ From {{inh|af|nl|bidden}}.
 Related to {{cog|de|Weide||willow; wicker}}.
 
 ===Noun===
-{{cim-noun|m|biddar|bìddale}}
+{{cim-noun|m|biddar|biddale}}
 
 # {{lb|cim|7}} [[wicker]], [[osier]]
 
