--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -62,6 +62,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 
 ====Derived terms====
 {{der3|en
+|axle weight
 |[[balance weight]], [[balanceweight]]
 |bantamweight
 |biweight
