t+cy:[[pedwartroedyn]] t+br:[[pevarzroadeg]] ([[WT:EDIT|Assisted]]) <quadruped#66393604>

--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -31,6 +31,7 @@ Borrowed from {{bor|en|fr|quadrupède}}, from {{etyl|frm|en}}, from {{etyl|la|en
 {{trans-top|a four-footed or four-legged animal}}
 * Armenian: {{t+|hy|չորքոտանի}}
 * Belarusian: {{t|be|чатырохно́гае|n}}
+* Breton: {{t|br|pevarzroadeg|m}}
 * Bulgarian: {{t+|bg|четириного|n}}
 * Catalan: {{t|ca|quadrúpede|m}}
 * Chinese:
@@ -74,6 +75,7 @@ Borrowed from {{bor|en|fr|quadrupède}}, from {{etyl|frm|en}}, from {{etyl|la|en
 * Ukrainian: {{t|uk|чотирино́ге|n}}
 * Uzbek: {{t|uz|toʻrt barobar}}
 * Volapük: {{t+|vo|follögaf}}
+* Welsh: {{t|cy|pedwartroedyn|m}}
 {{trans-bottom}}
 
 ====See also====
