/* Pronunciation */ +en rhyme (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <CD#66406358>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -26,6 +26,7 @@ Abbreviation of various terms and phrases.
 
 ===Pronunciation===
 * {{IPA|en|/ˌsiːˈdiː/}}
+* {{rhymes|en|i|s=2}}
 
 ===Noun===
 {{en-noun|~}}
