--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -51,6 +51,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 #: {{ux|en|He '''blew''' the tires and the engine.}}
 # {{lb|en|intransitive}} To suddenly fail destructively.
 #: {{ux|en|He tried to sprint, but his ligaments '''blew''' and he was barely able to walk to the finish line.}}
+#*: {{quote-web|en|author=Checkatrade.com|authorlink=Checkatrade.com|title='''Blown''' windows repair cost guide|text=A common problem for double glazed windows (or doors) is mist or condensation between the panes of glass. This is known as a '''blown''' window or failed double glazing. But what does it cost to repair?}}
 # {{lb|en|transitive|slang}} To recklessly [[squander]].
 #* {{quote-book|1=en|year=1932|year_published=1965|author=Delos W. Lovelace|authorlink=Delos W. Lovelace|title=[[w:King Kong (1933 film)|King Kong]]|page=136|passage=‘Holy Mackerel, Ann! I’m certainly glad we '''blew''' ourselves for that outfit of yours.’}}
 #: {{ux|en|I managed to '''blow''' $1000 at blackjack in under an hour.}}
