Australian state and territorial parliaments also have divisions <division#66422118>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -37,7 +37,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 #: {{hypo|en|identification division|environment division|data division|procedure division}}
 # {{lb|en|UK|Eton College}} A [[lesson]]; a [[class]].
 #: {{syn|en|div|q1=informal}}
-# {{lb|en|Australia}} A federal [[parliamentary]] [[constituency]].
+# {{lb|en|Australia}} A [[parliamentary]] [[constituency]].
 
 ====Synonyms====
 * {{sense|taxonomy}} {{l|en|divisio}}, {{l|en|phylum}}
