--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{inh|en|enm|beholden}}, from {{inh|en|ang|behealdan||to hold, have, occupy, possess, guard, preserve, contain, belong, keep, observe, consider, behold, look at, gaze on, see, signify, avail, effect, take care, beware, be cautious, restrain, act, behave}}, from {{inh|en|gmw-pro|*bihaldaną||to hold with, keep}}, equivalent to {{prefix|en|be|hold}}. Cognate with {{cog|stq|behoolde|t=to keep}}, {{cog|nl|behouden||to keep, restrain, preserve}}, {{cog|de|behalten||to keep, restrain, remember}}, {{cog|da|-}} and {{cog|no|beholde||to keep}} and {{cog|sv|behålla||to keep}}.
+From {{inh|en|enm|beholden}}, from {{inh|en|ang|behealdan||to hold, have, occupy, possess, guard, preserve, contain, belong, keep, observe, consider, behold, look at, gaze on, see, signify, avail, effect, take care, beware, be cautious, restrain, act, behave}}, from {{inh|en|gmw-pro|*bihaldan||to hold with, keep}}, equivalent to {{prefix|en|be|hold}}. Cognate with {{cog|stq|behoolde|t=to keep}}, {{cog|nl|behouden||to keep, restrain, preserve}}, {{cog|de|behalten||to keep, restrain, remember}}, {{cog|da|-}} and {{cog|no|beholde||to keep}} and {{cog|sv|behålla||to keep}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/bɪˈhəʊld/}}
