--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -6,8 +6,8 @@ From {{bor|en|la|enumerātus}}, from {{m|la|enumerō}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ɪˈnjuː.məˌɹeɪt/}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-enumerate.wav|Audio (Southern England)}}
 * {{a|GA}} {{IPA|en|/ɪˈn(j)u.məˌɹeɪt/}}
-{{rfap|en}}
 
 ===Verb===
 {{en-verb}}
