/* Verb */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <mega#66434196>

--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -246,7 +246,7 @@ From {{inh|is|non|mega}}, from {{inh|is|gem-pro|*maganą}}, from {{der|is|ine-pr
 #: {{ux|is|Þú '''mátt''' þetta ekki.|inline=1|You''''re''' not '''allowed''' to do that.}}
 #: {{ux|is|Hvað '''má''' bjóða ykkur að borða?|inline=1|What '''may''' offer you to eat?}}
 #: {{syn|is|hafa leyfi til}}
-# {{lb|is|intransitive}} to [[must]], to [[have to]]
+# {{lb|is|intransitive}} [[must]], to [[have to]]
 #: {{syn|is|verða}}
 # to have the [[strength]], to be [[able]]
 #: {{syn|is|megna}}
