t+he:[[הפלגת בכורה]] t+he:[[הפלגת בתולין]] ([[WT:EDIT|Assisted]]) <maiden voyage#66437047>

--- a/en/m/maiden voyage.745833.wikitext
+++ b/en/m/maiden voyage.745833.wikitext
@@ -18,6 +18,7 @@ See {{m|en|maiden|pos=a}}.
 * Finnish: {{t+|fi|neitsytmatka}}
 * French: {{t+|fr|voyage inaugural}}
 * German: {{t+|de|Jungfernfahrt|f}}
+* Hebrew: {{t+|he|הַפְלָגַת בְּכוֹרָה|f|tr=haflagat bekhora}}, {{t+|he|הַפְלָגַת בְּתוּלִין|f|tr=haflagat betulin}}
 * Indonesian: Perjalanan Perdana
 * Italian: {{t|it|viaggio inaugurale|m}}
 {{trans-mid}}
