--- a/en/e/Eostre.741426.wikitext
+++ b/en/e/Eostre.741426.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{lbor|en|ang|Ēostre|}}, {{m|ang|Ēastre||a word referring to "the rising dawn" to indicate the season of Spring}} and {{m|ang|ēastre||Easter}}, from {{der|en|gem-pro|*Austrǭ||Easter, springtime}}. {{doublet|en|Easter}}.
+A {{lbor|en|ang|Ēostre|nocap=1}}, the Northumbrian variant of West Saxon {{m|ang|Ēastre||a word referring to "the rising dawn" to indicate the season of Spring}} and {{m|ang|ēastre||Easter}}, from {{der|en|gem-pro|*Austrǭ||Easter, springtime}}. {{doublet|en|Easter}}.
 
 ===Pronunciation===
 * {{ang-IPA|Eostre}}
