t+cmn:[[電子偶素]] t+cmn:[[电子偶素]] t+cmn:[[正電子素]] t+cmn:[[正电子素]] t-balance ([[WT:EDIT|Assisted]]) <positronium#66443011>

--- a/en/p/positronium.746650.wikitext
+++ b/en/p/positronium.746650.wikitext
@@ -19,10 +19,12 @@
 
 ====Translations====
 {{trans-top|exotic atom}}
+* Chinese:
+*: Mandarin: {{t|cmn|電子偶素}}, {{t|cmn|电子偶素|tr=diànzǐ'ǒusù}}, {{t|cmn|正電子素}}, {{t|cmn|正电子素|tr=zhèngdiànzǐsù}}
 * German: {{t+|de|Positronium|n}}
 * Hungarian: {{t|hu|pozitrónium}}
-* Ido: {{t|io|positronio}}
 {{trans-mid}}
+* Ido: {{t|io|positronio}}
 * Italian: {{t|it|positronio|m}}
 * Russian: {{t+|ru|позитроний|m}}
 * Spanish: {{t+|es|positronio|m}}
