--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{prefix|en|anarcho|capitalism}}. {{coin|en|occ=economist|nat=American|Murray Rothbard|nocat=1}} in the mid-20th century.
+From {{prefix|en|anarcho|capitalism}}. Often attributed to American economist {{w|Murray Rothbard}} (1950s), but he never used the term in any of his writings.
 
 ===Noun===
 {{en-noun|head=[[anarcho-]][[capitalism]]|-}}
