--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -483,6 +483,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 [[Category:English 1-syllable words]]
 [[Category:English autological terms]]
 [[Category:English placeholder terms]]
+[[Category:en:Genitalia]]
 
 ----
 
