pinyin breve → caron <vodka#66472251>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -71,7 +71,7 @@ Cognates include {{cog|sa|उदक}}, {{cog|grc|ὕδωρ|}} → {{cog|en|hydro
 * Catalan: {{t+|ca|vodka|f}}
 * Chinese:
 *: Cantonese: {{t|yue|伏特加酒|tr=fuk6 dak6 gaa1 zau2}}, {{t|yue|伏特加|tr=fuk6 dak6 gaa1}}
-*: Mandarin: {{t|cmn|伏特加酒|tr=fútèjiājiǔ}}, {{t+|cmn|伏特加|tr=fútèjiā}}, {{t+|cmn|白酒|tr=báijiŭ}}
+*: Mandarin: {{t|cmn|伏特加酒|tr=fútèjiājiǔ}}, {{t+|cmn|伏特加|tr=fútèjiā}}, {{t+|cmn|白酒|tr=báijiǔ}}
 * Chuvash: {{t|cv|водка}}
 * Cornish: {{t|kw|vodka|m}}
 * Czech: {{t+|cs|vodka|f}}
