t+bg:[[враждебност]] ([[WT:EDIT|Assisted]]) <unfriendliness#66472940>

--- a/en/u/unfriendliness.742226.wikitext
+++ b/en/u/unfriendliness.742226.wikitext
@@ -14,6 +14,7 @@ From {{af|en|unfriendly|-ness}}. Compare {{cog|nl|onvriendelijkheid}}, {{cog|de|
 
 ====Translations====
 {{trans-top|the quality of being unfriendly}}
+* Bulgarian: {{t+|bg|враждебност|f}}
 * Danish: {{t|da|uvenlighed|c}}
 * German: {{t+|de|Unfreundlichkeit|f}}
 * Hungarian: {{t+|hu|barátságtalanság}}
