--- a/en/i/indeterminable.742104.wikitext
+++ b/en/i/indeterminable.742104.wikitext
@@ -3,7 +3,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|frm|en}} {{m|frm|indeterminable}}, from {{etyl|LL.|en}} {{m|la|indeterminabilis}}.
+From {{der|en|frm|indeterminable}}, from {{der|en|LL.|indeterminabilis}}.
 
 ===Adjective===
 {{en-adj}}
