t+pl:[[[[flota]] [[handlowy|handlowa]]]] ([[WT:EDIT|Assisted]]) <merchant navy#66475964>

--- a/en/m/merchant navy.776864.wikitext
+++ b/en/m/merchant navy.776864.wikitext
@@ -19,7 +19,7 @@
 {{trans-mid}}
 * Greek: {{t|el|εμπορικός στόλος}}
 * Italian: {{t|it|marina mercantile|f}}
-* Polish: {{t-needed|pl}}
+* Polish: {{t+|pl|[[flota]] [[handlowy|handlowa]]|f}}
 * Portuguese: {{t|pt|marinha mercante|f}}
 * Spanish: {{t|es|marina mercante|f}}
 {{trans-bottom}}
