--- a/en/m/merchant navy.776864.wikitext
+++ b/en/m/merchant navy.776864.wikitext
@@ -12,7 +12,7 @@
 ====Translations====
 {{trans-top|civilian naval fleet}}
 * Dutch: {{t|nl|handelsvloot|f|m}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|kauppalaivasto}}
 * French: {{t+|fr|marine marchande|f}}
 * Georgian: {{t|ka|სავაჭრო ფლოტი}}
 * German: {{t+|de|Handelsmarine|f}}, {{t+|de|Handelsflotte|f}}
