--- a/en/a/aziridine.742293.wikitext
+++ b/en/a/aziridine.742293.wikitext
@@ -25,7 +25,7 @@
 ====Translations====
 {{trans-top|three-membered heterocycle}}
 * Chinese:
-*: Mandarin: {{t|cmn|氮丙啶|tr=dànbǐngdìng}}, {{t|cmn|環乙亞胺}}, {{t|cmn|环乙亚胺|tr=huányǐyààn}}, {{t|cmn|氮雜環丙烷}}, {{t|cmn|氮杂环丙烷|tr=dànzáhuánbǐngwán}}, {{t+|cmn|吖丙啶|tr=ābǐngdìng}}, {{t|cmn|環乙胺}}, {{t|cmn|环乙胺|tr=huányǐàn}}, {{t|cmn|乙烯亞胺}}, {{t|cmn|乙烯亚胺|tr=yǐxīyààn}}, {{t|cmn|乙撐亞胺}}, {{t|cmn|乙撑亚胺|tr=yǐchēngyààn}}
+*: Mandarin: {{t|cmn|氮丙啶|tr=dànbǐngdìng}}, {{t|cmn|環乙亞胺}}, {{t|cmn|环乙亚胺|tr=huányǐyà'àn}}, {{t|cmn|氮雜環丙烷}}, {{t|cmn|氮杂环丙烷|tr=dànzáhuánbǐngwán}}, {{t+|cmn|吖丙啶|tr=ābǐngdìng}}, {{t|cmn|環乙胺}}, {{t|cmn|环乙胺|tr=huányǐ'àn}}, {{t|cmn|乙烯亞胺}}, {{t|cmn|乙烯亚胺|tr=yǐxīyà'àn}}, {{t|cmn|乙撐亞胺}}, {{t|cmn|乙撑亚胺|tr=yǐchēngyà'àn}}
 * Finnish: {{t|fi|etyleeni-imiini}}
 {{trans-mid}}
 * French: {{t|fr|aziridine|f}}
