--- a/en/u/unisexual.802726.wikitext
+++ b/en/u/unisexual.802726.wikitext
@@ -19,6 +19,7 @@
 ====Translations====
 {{trans-top|having characteristics of a single sex}}
 * Belarusian: {{t|be|аднапо́лы}}
+* Bulgarian: {{t|bg|еднополов}}
 * Chinese:
 *: Mandarin: {{t+|cmn|單性|alt=單性的|sc=Hani}}, {{t+|cmn|单性|tr=dānxìng de|alt=单性的|sc=Hani}}
 * Czech: {{t|cs|nedokonalý|m}}
