/* Verb */ <miss out#66487205>

--- a/en/m/miss out.802552.wikitext
+++ b/en/m/miss out.802552.wikitext
@@ -5,7 +5,8 @@
 {{en-verb|*}}
 
 # To miss an experience or lose an opportunity, etc. that should not be missed.
-#: {{ux|en|Anybody who does not try the homemade ice cream is really '''missing out'''.}}
+#* '''2006 Feb. 17''', Graham Linehan, ''[http://en.wikipedia.org/wiki/The_IT_Crowd The IT Crowd]'', Season 1, Episode 4:
+#*: Oh my good gracious me, look at that. Whoa! Quick!<br>What is it?<br>I can't explain it. You're just going to have to come over here and look out this window for a while.<br>Whatever it is, we're not interested.<br>Well. I have to say you're '''''missing out'''''.
 #: ''I think he's going to '''miss out''' on the opportunity to date her if he doesn't hurry.''
 #* {{quote-journal
 |en
@@ -16,6 +17,7 @@
 |url=http://www.bbc.co.uk/sport/0/football/17878435
 |page=
 |passage=The final started with £85m worth of striking talent on the bench as Carroll was a Liverpool substitute and Chelsea's Fernando Torres '''missed out''' on a starting place against his former club.}}
+#: {{ux|en|Anybody who does not try the homemade ice cream is really '''missing out'''.}}
 # {{lb|en|chiefly|British}} To [[leave out]], to [[omit]].
 #* '''2010''' November 8, ''Meanwhile, in the TARDIS...'' (mini-episodes included in the fifth season of ''{{w|Doctor Who}}''):
 #*: DOCTOR (as the TARDIS is showing pictures of his previous companions): '''Miss out''' the metal dog, why don't you?
