--- a/en/r/resource energy.776622.wikitext
+++ b/en/r/resource energy.776622.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun|~}}
 
-# Energy taken from a [[source]] that is [[deplete]]d by [[extraction]] (e.g. fossil fuels).
+# Energy taken from a [[source]] that is [[deplete]]d by [[extraction]] (such as [[fossil fuel#Noun|fossil fuels]]).
 
 ===Antonyms===
 * {{l|en|renewable energy}}
