--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -24,7 +24,7 @@ From {{bor|en|es|[[las]] [[vega|vegas]]||the fertile meadows}}.
 
 ====Translations====
 {{trans-top|city}}
-* Arabic: {{t|ar|لَاس فِيغَاس|f|tr=lās fīḡas}}
+* Arabic: {{t+|ar|لَاس فِيغَاس|f|tr=lās fīḡas}}
 * Armenian: {{t+|hy|Լաս Վեգաս}}
 * Bengali: {{t+|bn|লাস ভেগাস}}
 * Chinese:
