t+dv:[[އޫރުތައް]] ([[WT:EDIT|Assisted]]) <pig#66493178>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -173,7 +173,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Da'a Kaili: {{t-check|kzf|vavu}} {{qualifier|Rai Kaili}}
 * Dalmatian: {{tt|dlm|puarc|m}}
 * Danish: {{tt+|da|svin|n}}, {{tt+|da|gris|c}}
-* Dhivehi: {{t|dv|އޫރު|s}}
+* Dhivehi: {{t|dv|އޫރު|s}}, {{t|dv|އޫރުތައް|p}}
 * Drung: {{tt|duu|waq}}
 * Dutch: {{tt+|nl|zwijn|n}}, {{tt+|nl|varken|n}}
 * Eastern Cham: {{tt|cjm|ꨚꨝꨶꨬ|tr=pabwei}}, {{tt|cjm|ꨂꩆ|tr=un}}
