--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -57,7 +57,7 @@ Various alternative etymologies have also been proposed:
 |j=yeh4
 |mb=ngṳè
 |md=nguŏk
-|mn=xm,jj,tp,mg,hc,sg,kl,ph:ge̍h/qz,na,ha,yc,lk,km,hc,sg:ge̍rh/zz,zp,ct,tn,kh,tc,sg,pn:goe̍h/ly:gǒe/yl:gōe/sx:gēr/ml,jj,na,ha,yc,zp,ct,tw,sg,pn,kl:goa̍t
+|mn=xm,jj,tp,mg,hc,sg,ph:ge̍h/qz,na,ha,yc,lk,km,hc,sg,kl:ge̍rh/zz,zp,ct,tn,kh,tc,sg,pn:goe̍h/ly:gǒe/yl:gōe/sx:gēr/ml,jj,na,ha,yc,zp,ct,tw,sg,pn,kl:goa̍t
 |mn_note=ge̍h/ge̍rh/goe̍h/gōe/gēr - vernacular; goa̍t - literary
 |mn-t=ghuêh8
 |w=5hhyq,5hhioq
