t+xag:[[𐕆𐔼𐕅]] ([[WT:EDIT|Assisted]]) <thing#66526213>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -157,6 +157,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 ====Translations====
 {{trans-top|that which is considered to exist as a separate entity, object, quality or concept}}
 * Afrikaans: {{t+|af|ding}}
+* Aghwan: {{t|xag|𐕆𐔼𐕅}}
 * Albanian: {{t+|sq|send|m}}
 * Amharic: {{t|am|ነገር|sc=Ethi}}
 * Arabic: {{t+|ar|شَيْء|m}}
