--- a/en/m/monarchism.720278.wikitext
+++ b/en/m/monarchism.720278.wikitext
@@ -55,5 +55,6 @@ Borrowed from {{bor|en|fr|monarchisme}}
 * Ukrainian: {{t|uk|монархізм|m}}
 {{trans-bottom}}
 
+[[Category:en:Ideologies]]
 [[Category:en:Monarchism]]
 [[Category:en:Monarchy]]
